レビュー依頼

--- a/src/data/blog/astro-content-layer.mdx
+++ b/src/data/blog/astro-content-layer.mdx
@@ -2,8 +2,8 @@
 publishDate: 2024-12-10
 category: tech
 title: Astro Content Layer で個人ブログのコンテンツ取得はもっと楽になる
-draft: true
-description: Astro Content Layerは
+draft: false
+description: Astro v5 から Stable になった Content Layer は、コンテンツサイトに必要な記事取得を抽象化した機能です。この記事では Content Layer が何を解決し、どのようにコンテンツサイト構築に使えるのかを紹介します。
 tags:
   - Astro
   - 個人ブログ
