fix: ESLintルールの表示をエディタ上で警告として変更する方法を明確化

--- a/src/data/blog/eslint-rules-customization.mdx
+++ b/src/data/blog/eslint-rules-customization.mdx
@@ -16,14 +16,14 @@ import changeToWarn from "../../assets/images/eslint-rules-customization/change-
 
 ## 課題： ESLintルールはそのままに、自分のエディタ上の表示を変更したい
 
-とあるTypeScriptプロジェクトにおいて、「あるESLintをチェックすることはOKだが、視認性の関係でSeverityを変更したい」という要求がありました。
+とあるTypeScriptプロジェクトにおいて、「あるESLintをチェックすることはOKだが、視認性の関係でエディタ上でのSeverityを変更したい」という要求がありました。
 
-例えば`@typescript-eslint/no-unused-vars`を`error`に指定していると、使用していない変数がある場合にエディタ上で赤くハイライトされます。
+例えば`@typescript-eslint/no-unused-vars`を`error`に指定していると、使用していない変数がある場合にエディタ上で赤く波線が表示されます。
 
 <Image src={noUnusedVars} alt="未使用の変数hogeのVSCode上でホバーしている。Lintエラーであることを示す波線が変数名の下に出ており、エラーであるため赤い色で表示されている。" />
 
-使われていない変数があることをチェックするのはルールとしてチェックしたいが、エラーではなく警告として表示したい、という要求です。
-解決策の一つは愚直にルールのSeverityを変更することですが、これはプロジェクト全体に影響を与えるため、他の開発者にも影響を与えてしまいます。
+使われていない変数があることをチェックするのはルールとして残しておきたいが、エディタ上ではエラーではなく警告を示す黄色の波線として表示したい、という要求です。
+解決策の一つは愚直にルールのSeverityを変更することですが、これは他の開発者にも影響を与えてしまうという問題があります。
 
 ## VSCodeの`eslint.rules.customizations`を使ってSeverityを変更する
 
@@ -50,7 +50,7 @@ import changeToWarn from "../../assets/images/eslint-rules-customization/change-
 
 <Image src={changeToWarn} alt="未使用の変数hogeのVSCode上でホバーしている。警告はエラーの時と同じだが、Lintエラーが出ていることを示す波線が警告の黄色になっている" />
 
-もともとエラーの赤線だったものが、警告の黄色線に変わりました。
+もともとエラーの赤線だったものが、警告の黄色線に変わり、期待していた挙動を実現できました。
 
 記載はユーザー固有のsettings.jsonでも適用されるため、もしプロジェクト全体に影響を与えたくない場合は個人の設定として適用することができます
 （オーバーライドする設定なので、ワークスペース側の設定に書くことはないと思いますが）。
