build: fix build problem

--- a/src/data/blog/chrome-extension-kyo-no-esa/index.mdx
+++ b/src/data/blog/chrome-extension-kyo-no-esa/index.mdx
@@ -28,7 +28,7 @@ GitHubはREADMEすら治してません...自分用なので。
 
 import optionsPage from './options-page.png';
 
-<Image src="./options-page.png" alt="オプションページ" />
+<Image src={optionsPage} alt="オプションページ" />
 
 ## 感想
 
