--- a/src/data/blog/create-blog-command-4/index.mdx
+++ b/src/data/blog/create-blog-command-4/index.mdx
@@ -18,7 +18,7 @@ https://ikuma-t.work/posts/create-blog-command-3
 
 https://github.com/IkumaTadokoro/blog-cli
 
-import blogCommand from './blog_command.png';
+import blogCommand from './blog_command.gif';
 
 <Image src={blogCommand} alt="ブログコマンド" />
 
@@ -97,7 +97,7 @@ https://cliffy.io/
 
 ### 補完：`completions`
 
-import completionsCommand from './completions_command.png';
+import completionsCommand from './completions.gif';
 
 <Image src={completionsCommand} alt="completionsコマンド" />
 
@@ -211,7 +211,7 @@ https://cliffy.io/docs@v0.24.2/table
 
 ### 新規作成: `new`
 
-import newCommand from './new_command.png';
+import newCommand from './new.gif';
 
 <Image src={newCommand} alt="newコマンド" />
 
@@ -240,7 +240,7 @@ https://cliffy.io/docs@v0.24.2/prompt/types/input#auto-suggestions
 
 ### 編集: `edit`
 
-import editCommand from './edit_command.png';
+import editCommand from './edit.gif';
 
 <Image src={editCommand} alt="editコマンド" />
 
