--- a/src/data/blog/dokusyu-git/index.mdx
+++ b/src/data/blog/dokusyu-git/index.mdx
@@ -11,7 +11,7 @@ import { Image } from 'astro:assets';
 
 import image from "./eyecatch-dokusyu-git.png"
 
-<Image src={image} alt="" />
+<Image src={image} alt="代替テキスト" />
 
 ## GUIに頼りきりでGitコマンドうろ覚え
 
