--- a/src/data/blog/gas-template-esbuild/index.mdx
+++ b/src/data/blog/gas-template-esbuild/index.mdx
@@ -26,7 +26,7 @@ GASで業務効率化できるのは良いことなんですが
 
 import image from "./esbuild-gas-template.png"
 
-<Image src={image} alt="" />
+<Image src={image} alt="代替テキスト" />
 
 とりあえずいつも使っているESLint、Prettier、TypeScriptは全部突っ込みました。
 
