--- a/src/data/blog/gatsyby-twitter-card/index.mdx
+++ b/src/data/blog/gatsyby-twitter-card/index.mdx
@@ -12,7 +12,7 @@ import { Image } from 'astro:assets';
 
 import image from "./Gatsbyjs_TwitterCard.png"
 
-<Image src={image} alt="" />
+<Image src={image} alt="代替テキスト" />
 
 ## 問題:TwitterCardが表示されない
 
