--- a/src/data/blog/publish-srcpan/index.mdx
+++ b/src/data/blog/publish-srcpan/index.mdx
@@ -39,7 +39,7 @@ https://marketplace.visualstudio.com/items?itemName=IkumaTadokoro.srcpan
 
 import image from "./srcpan-view.png"
 
-<Image src={Image} alt="" />
+<Image src={image} alt="代替テキスト" />
 
 拡張機能をアクティビティバーで選択すると、2 つのペインが開きます。
 
@@ -117,7 +117,7 @@ pathRegExp には正規表現を指定することができ、replacement には
 
 import image2 from "./docking.png"
 
-<Image src={image2} alt="" />
+<Image src={image2} alt="代替テキスト" />
 
 ### ディレクトリの絞り込み
 
