--- a/src/data/blog/read-web-workers/index.mdx
+++ b/src/data/blog/read-web-workers/index.mdx
@@ -9,9 +9,9 @@ draft: false
 
 import { Image } from 'astro:assets';
 
-import pictureLarge from './picture_large978-4-87311-596-2.png';
+import pictureLarge from './picture_large978-4-87311-596-2.jpeg';
 
-<Image src={pictureLarge} alt="" />
+<Image src={pictureLarge} alt="代替テキスト" />
 
 画像引用元：https://www.oreilly.co.jp/books/9784873115962/
 
