--- a/src/data/blog/setup-desk-2022-06/index.mdx
+++ b/src/data/blog/setup-desk-2022-06/index.mdx
@@ -24,7 +24,7 @@ https://ja.wikipedia.org/wiki/%E3%83%95%E3%82%A3%E3%83%BC%E3%82%AB
 
 import image from "./fika_mindmap.png"
 
-<Image src={image} alt="" />
+<Image src={image} alt="代替テキスト" />
 *transnoで作成しているマインドマップ*
 
 Transnoについてはこちらの記事で紹介しています。
