--- a/src/data/blog/tech-book-fest-17/index.mdx
+++ b/src/data/blog/tech-book-fest-17/index.mdx
@@ -33,7 +33,7 @@ import koregaSenrihin from './korega-senrihin.jpg';
 
 import image from "./azaoi-lt.png"
 
-<Image src={Image} alt="" />
+<Image src={image} alt="あざといLTのカバー写真" />
 
 [あざといLT：LT同好会](https://techbookfest.org/product/uXNrgrx0ZkWdwM54Xv34XR?productVariantID=hbdFKYmiUtjG2C4xFbeQQ8)
 
