--- a/src/data/blog/test/index.mdx
+++ b/src/data/blog/test/index.mdx
@@ -2,7 +2,8 @@
 title: "テスト用のサンプル記事"
 publishDate: 2024-01-01
 category: tech
-tags: 
+slug: test
+tags:
     - test
     - テスト
 draft: true
@@ -36,10 +37,10 @@ draft: true
 
 ## 段落
 
-これは1つ目の段落の1行目です。  
+これは1つ目の段落の1行目です。
 これは1つ目の段落の2行目です。
 
-これは2つ目の段落の1行目です。  
+これは2つ目の段落の1行目です。
 これは2つ目の段落の2行目です。
 
 ## 順序無しリスト
