--- a/src/data/blog/transfer-domain/index.mdx
+++ b/src/data/blog/transfer-domain/index.mdx
@@ -15,7 +15,7 @@ import { Image } from 'astro:assets';
 
 import image from "./popup.png"
 
-<Image src={image} alt="" />
+<Image src={image} alt="代替テキスト" />
 
 取得した当初も思っていましたが、やはり UX が個人的には辛過ぎる（何か操作しようとするたびに出てくる、やりたい操作から遠ざけようとするモーダルとか）ので、ドメインの更新期限催促が来たこのタイミングで Google Domains に移管することにしました。
 
@@ -25,7 +25,7 @@ import image from "./popup.png"
 
 import image2 from "./non-support.png"
 
-<Image src={image2} alt="" />
+<Image src={image2} alt="代替テキスト" />
 
 [料金とサポート対象のドメイン末尾 \- Google Domains ヘルプ](https://support.google.com/domains/answer/6010092?hl=ja#zippy=%2C%E3%83%89%E3%83%A1%E3%82%A4%E3%83%B3%E6%9C%AB%E5%B0%BE%E3%81%AE%E4%BE%A1%E6%A0%BC)
 
@@ -39,13 +39,13 @@ ikuma-t.works は取れるんですけど、年間 ¥3,500 するので却下で
 
 import image3 from "./vercel-setting.png"
 
-<Image src={image3} alt="" />
+<Image src={image3} alt="代替テキスト" />
 
 設定 > domains > ikuma-t.com を新規追加
 
 import image4 from "./google-domains-setting.png"
 
-<Image src={image4} alt="" />
+<Image src={image4} alt="代替テキスト" />
 
 Google Domains 側にも設定
 
@@ -57,7 +57,7 @@ Google Domains 側にも設定
 
 import image5 from "./how-to-stop.png"
 
-<Image src={image5} alt="" />
+<Image src={image5} alt="代替テキスト" />
 
 というわけで、自動更新さえ停止してしまえばお片付け終了です。
 
@@ -65,13 +65,13 @@ import image5 from "./how-to-stop.png"
 
 import image6 from "./site-before.png"
 
-<Image src={image6} alt="" />
+<Image src={image6} alt="代替テキスト" />
 
 サイト内に「ikuma-t.work」と書いている箇所が結構あったので、これを置換します。
 
 import image7 from "./site-after.png"
 
-<Image src={image7} alt="" />
+<Image src={image7} alt="代替テキスト" />
 
 ページタイトル等も忘れずに変更しておきます。
 
