--- a/src/data/blog/try-gist-pad/index.mdx
+++ b/src/data/blog/try-gist-pad/index.mdx
@@ -27,7 +27,7 @@ https://marketplace.visualstudio.com/items?itemName=vsls-contrib.gistfs
 
 import image from "./gistpad-preview.png"
 
-<Image src={image} alt="" />
+<Image src={image} alt="代替テキスト" />
 
 これで自分が作成した Gist の一覧が見られるようになります（鍵付きのものは Secret Gist。鍵がついているけど別に見られて困るものではないのでそのままスクショ掲載しています）。
 
