--- a/src/data/blog/exercism-ruby/index.mdx
+++ b/src/data/blog/exercism-ruby/index.mdx
@@ -12,7 +12,7 @@ import { Image } from 'astro:assets';
 
 import image from "./exercism-ruby.png"
 
-<Image src={image} alt="" />
+<Image src={image} alt="代替テキスト" />
 
 ## Exercismとは
 
