build(deps): pathを修正

--- a/src/data/blog/astro-content-layer/index.mdx
+++ b/src/data/blog/astro-content-layer/index.mdx
@@ -237,7 +237,7 @@ const load = async (context: LoaderContext) => {
 
 より詳細を知りたい方は [Astro Content Loader API | Docs](https://5-0-0-beta.docs.astro.build/en/reference/content-loader-reference/#loadercontext) を参照してください。
 
-import Tips from "../../../components/tips.astro";
+import Tips from "../../../features/blog/ui/tips.astro";
 
 <Tips title="コラム：Markdownコンテンツのパース">
 
